# research

./: .gitignore  classification_model.ipynb  feature_maps.ipynb  pyproject.toml  requirements.txt  rnd.py
.ipynb_checkpoints/: bounding_box-checkpoint.ipynb
scripts/: bounding_box.ipynb  classification_model.ipynb  convert_to_csv.ipynb  data.ipynb  rnd.py
src/: __main__.py  data.py  model.py  setup.py
