[tool.poetry]
name = "ml"
description = ""
authors = ["Karan Ahlawat", "Raghav Kapoor"]
version = "1.0.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
pandas = "^1.4.2"
opencv-python = "^4.5.5"
keras = "^2.9.0"
tensorflow = "^2.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
jupyter = "^1.0.0"
ipython = "^8.3.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
